# pdl

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  demo-pages.yml
bench/: README.md
bench/baselines/full-baseline-20260606/: environment.txt  report.csv
bench/examples/large/: million_row_distinct_segments.pdl  million_row_projection_smoke.pdl  million_row_segment_summary.pdl  million_row_top_scores.pdl
bench/workloads/algraf/: pdl_arrow_handoff.ag
bench/workloads/large/: million_row_complete_buckets.pdl  million_row_composite_join_lookup.pdl  million_row_composite_join_rollup.pdl  million_row_distinct_segments.pdl  million_row_dynamic_text_and_col.pdl  million_row_dynamic_window_offsets.pdl  million_row_join_dimension.pdl  million_row_jsonl_temporal_buckets.pdl  million_row_multi_output_fanout.pdl  million_row_mutate_arrow_stream.pdl  million_row_mutate_csv.pdl  million_row_mutate_csv_stdin.pdl  million_row_mutate_parquet.pdl  million_row_pivot_longer.pdl  million_row_projection_smoke.pdl  million_row_segment_summary.pdl  million_row_segment_summary_arrow_stream.pdl  million_row_segment_summary_parquet.pdl  million_row_temporal_buckets.pdl  million_row_text_emission.pdl  million_row_top_scores.pdl  million_row_union_null_padding.pdl  million_row_union_partitions.pdl  million_row_window_bounded_frames.pdl  million_row_window_offsets_values.pdl  million_row_window_running.pdl  pdl_to_algraf_arrow_handoff.pdl  windowed_sales_rank.pdl
crates/pdl-bench/: Cargo.toml
crates/pdl-bench/src/: main.rs
crates/pdl-cli/: Cargo.toml
crates/pdl-cli/src/: args.rs  diagnostics.rs  handlers.rs  init.rs  main.rs  render.rs  serve.rs
crates/pdl-cli/src/render/: ast_serialize.rs  controls_render.rs  ir_serialize.rs  plan_render.rs  schema_render.rs  span_json.rs
crates/pdl-cli/templates/: PDL_LANG.md
crates/pdl-cli/tests/: top_regions.rs
crates/pdl-core/: Cargo.toml
crates/pdl-core/src/: diagnostic.rs  error.rs  lib.rs  severity.rs  source.rs  span.rs
crates/pdl-core/tests/: workspace_boundaries.rs
crates/pdl-data/: Cargo.toml
crates/pdl-data/src/: arrow.rs  csv.rs  engine.rs  format.rs  frame.rs  geo.rs  jsonl.rs  lib.rs  parquet.rs  schema.rs  temporal.rs  value.rs
crates/pdl-driver/: Cargo.toml
crates/pdl-driver/src/: cache.rs  facts.rs  io.rs  lib.rs  path.rs  plan.rs  prepare.rs  report.rs  source.rs
crates/pdl-editor-services/: Cargo.toml
crates/pdl-editor-services/src/: completion.rs  diagnostics.rs  hover.rs  lib.rs  scope_analysis.rs  services.rs  symbols_and_refs.rs
crates/pdl-exec/: Cargo.toml
crates/pdl-exec/src/: lib.rs  manifest.rs  output.rs  planning.rs  preview.rs  runtime.rs
crates/pdl-exec/src/runtime/: native_lowering.rs  native_planning.rs  row_eval.rs  stages.rs
crates/pdl-exec/tests/: geospatial.rs
crates/pdl-exec/tests/fixtures/: tiny.dbf  tiny.shp  tiny.shx
crates/pdl-lsp/: Cargo.toml
crates/pdl-lsp/src/: backend.rs  lib.rs
crates/pdl-parity-tests/: Cargo.toml
crates/pdl-parity-tests/fixtures/stdin/: arrow_stream_passthrough.csv  stdin_orders_csv.csv
crates/pdl-parity-tests/src/: lib.rs
crates/pdl-parity-tests/tests/: parity_examples.rs  selected_engine_fixtures.rs
crates/pdl-parity-tests/tests/common/: mod.rs
crates/pdl-semantics/: Cargo.toml
crates/pdl-semantics/src/: analyzer.rs  controls.rs  ir.rs  lib.rs  registry.rs  schema.rs  types.rs
crates/pdl-syntax/: Cargo.toml
crates/pdl-syntax/src/: ast.rs  cst.rs  format.rs  lexer.rs  lib.rs  parser.rs
crates/pdl-wasm/: Cargo.toml
crates/pdl-wasm/src/: abi.rs  editor.rs  lib.rs  runtime.rs
demo/: index.html  package-lock.json  package.json  vite.config.ts
demo/public/: homepage.pdl
demo/public/data/: README.md  customers.csv  daily_orders_2026_02_01.csv  sales.csv
demo/scripts/: copy-pages-fallback.mjs
demo/src/: App.tsx  PdlEditor.tsx  editorProviders.ts  editorSetup.ts  main.tsx  pathBrowser.ts  pdlWasm.ts  publicAssets.ts  styles.css
demo/src/pages/: DemoPage.tsx  DocsPage.tsx  HomePage.tsx
docs/: LANGUAGE_ARCH_BLUEPRINT.md  NPM_PACKAGES.md  PDL_NATIVE_COVERAGE.csv  PDL_NATIVE_COVERAGE.md  PDL_SPEC.md  V0_10_PLAN.md  V0_11_PLAN.md  V0_12_PLAN.md  V0_13_PLAN.md  V0_14_PLAN.md  V0_15_PLAN.md  V0_16_PLAN.md  V0_17_PLAN.md  V0_18_PLAN.md  V0_19_PLAN.md  V0_1_PLAN.md  V0_20_PLAN.md  V0_21_PLAN.md  V0_22_PLAN.md  V0_23_PLAN.md  V0_24_PLAN.md  V0_25_PLAN.md  V0_26_PLAN.md  V0_27_PLAN.md  V0_28_PLAN.md  V0_29_PLAN.md  V0_2_PLAN.md  V0_30_1_PLAN.md  V0_30_PLAN.md  V0_31_PLAN.md  V0_32_PLAN.md  V0_33_PLAN.md  V0_34_PLAN.md  V0_35_PLAN.md  V0_36_PLAN.md  V0_37_PLAN.md  V0_38_PLAN.md  V0_39_PLAN.md  V0_3_PLAN.md  V0_40_PLAN.md  (+21 more)
editors/assets/: pdl.tmLanguage.json
editors/monaco/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
editors/monaco/assets/: language-configuration.json  pdl.tmLanguage.json
editors/monaco/src/: index.tsx  vite-env.d.ts
editors/vscode/: .vscodeignore  LICENSE.md  README.md  esbuild.js  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: pdl.tmLanguage.json
examples/: arrow_stream_passthrough.pdl  binding_start.pdl  coerce_to_number.pdl  coerce_values.csv  complete_keys.pdl  county_metric_join.pdl  county_metrics.csv  customer_window_metrics.pdl  daily_orders_2026_02_02.csv  daily_orders_union.pdl  daily_visits.csv  dynamic_text_and_col.csv  dynamic_text_and_col.pdl  jsonl_orders.pdl  monthly_order_totals.pdl  monthly_sales.csv  named_outputs.pdl  non_terminal_save.pdl  order_events.csv  order_region_summary.pdl  orders.jsonl  orders_cleaned.pdl  orders_raw.csv  pivot_longer_basics.pdl  reactive_controls_dashboard.pdl  reactive_trip_dashboard.pdl  reactive_trips.csv  sales.csv  segment_revenue.pdl  stdin_orders_csv.pdl  stdout_arrow_file.pdl  stdout_parquet.pdl  top_regions.pdl  us_counties.geojson  window_frame_bounded.pdl  window_frame_named.pdl
scripts/: generate-million-row-csv.sh  pdl-algraf-arrow-smoke.sh  run-large-demos.sh  sync-editor-assets.mjs
(+4 files in other folders)
