[package]
name = "pdl-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "pdl-bench"
path = "src/main.rs"

[dependencies]
arrow-array = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
parquet = { workspace = true, features = ["arrow"] }
serde_json = { workspace = true }
