[package]
name = "pdl-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dashmap = { workspace = true }
pdl-core = { workspace = true }
pdl-editor-services = { workspace = true, features = ["native-formats"] }
tokio = { workspace = true }
tower-lsp = { workspace = true }
